      to turn it off.

2014xxxx; YASW 0.6 "(master)"
 - Progress dialogs for long operations
 - Performance optimisation (calculate only when seen on screen or exporting) & bug fixes
 - Removed doxygen documentation as it is not complete. I will comment in the source as much as possible, but
   without the doxygen format.
 - Color Correction Filter (Work in Progress)

20130629; YASW 0.5 "release few but release often"
 - Key shortcuts
 - Redesign of the Scaling Filter Widget
 - New policies for propagating changes. I'm not 100% happy as this is quite
   complicated. But I have no other Idea for now... Closes #14
 - Move am image between left and right column. Closes #13
 - Move image selection with arrow keys. Closes #12
 - Segfault when changing settings of a non existent image - Fixes #15
 - QPixmap::scaled: Pixmap is a null pixmap while loading - Fixes #17
 - Fixed #18 Inserted item is selected but does not apear in the filter select
 - Fixed #10 Margins + Positioning

20130601; YASW 0.4
 - Fixed Ticket #2 (Image order not retained when project is reloaded.)
 - Fixed Ticket #1 (Display FileName instead of BaseName in the image list)
 - Fixed Ticket #3 (Propagate settings to all images for one side)
 - Added a background color (configurable) for the filter widgets.
 - Fixed Ticket #11 (Do not interleave pages in PDF Export)
 - Scaling filter
 - Improve PDF Export (a lot!)

20130525; YASW 0.3 "yasw has reached one (1) user!"
 - About dialog
 - open -> recent projects
 - change selection color for dekeystoning and cropping
 - move all corners (dekeystonig, cropping) when pressing "control" while draging one of the corners

20121118; YASW 0.2
 - export to pdf
 - a lot of small fixes in handling to pages types (even/odd)
 - cleaning old code away (only one page type handling)
 - menu for adding/removing images
 - key "delete" deletes an image
 - key "pgup/pgdown" to move image
 - windows port (build on linux with mxe.cc)