@@ -71,6 +71,63 @@ void Dekeystoning::setSettings(QMap<QString, QVariant> settings)
     loadingSettings = false;
 }
 
+void Dekeystoning::settings2Dom(QDomDocument &doc, QDomElement &imageElement, QMap<QString, QVariant> settings)
+{
+    QDomElement filter = doc.createElement(getIdentifier());
+    imageElement.appendChild(filter);
+
+    QDomElement pointElement;
+    QPointF point;
+
+    QString corner;
+    QStringList cornerNames;
+    int i;
+
+    // Iterate through cornerNames to save all 4 Positions
+    cornerNames << "topLeftCorner" << "topRightCorner" << "bottomRightCorner" << "bottomLeftCorner";
+    for (i = 0; i < cornerNames.size(); i++) {
+        corner = cornerNames.at(i);
+        if (settings.contains(corner)) {
+            pointElement = doc.createElement(corner);
+            point = settings[corner].toPoint();
+            pointElement.setAttribute("x", point.x());
+            pointElement.setAttribute("y", point.y());
+            filter.appendChild(pointElement);
+        }
+    }
+}
+
+QMap<QString, QVariant> Dekeystoning::dom2Settings(QDomElement &filterElement)
+{
+    QMap<QString, QVariant> settings;
+    QStringList cornerNames;
+    QString corner;
+    int i;
+    QDomElement cornerElement;
+
+    // Iterate through cornerNames to save all 4 Positions
+    cornerNames << "topLeftCorner" << "topRightCorner" << "bottomRightCorner" << "bottomLeftCorner";
+
+
+    for (i = 0; i < cornerNames.size(); i++) {
+        corner = cornerNames.at(i);
+
+        cornerElement = filterElement.firstChildElement(corner);
+
+
+//        QString s;
+//        QTextStream str(&s, QIODevice::WriteOnly);
+//        cornerElement.save(str, 2);
+//        qDebug() << qPrintable(s);
+
+        if (!cornerElement.isNull()) {
+            settings[corner] = QPointF(cornerElement.attribute("x").toDouble(),
+                                       cornerElement.attribute("y").toDouble());
+        }
+    }
+    return settings;
+}
+
 QImage Dekeystoning::filter(QImage inputImage)
 {
     QPolygonF polygon = widget->polygon();
