@@ -17,11 +17,12 @@
 
 # Disable warning about non-static data member initializers.
 # No idea if this works on other platforms, old platforms will probably do not support it.
-DEFINES += "VERSION=0.5"
+DEFINES += "VERSION=0.6"
 
 QMAKE_CXXFLAGS += -std=c++11
 TARGET = yasw
 TEMPLATE = app
+QT += xml
 SOURCES += main.cpp \
     mainwindow.cpp \
     filter/basefilter.cpp \
