@@ -52,6 +52,7 @@ User requests:
  - Removed doxygen documentation as it is not complete. I will comment in the source as much as possible, but
    without the doxygen format.
  - Color Correction Filter (Work in Progress)
+ - XML Project Files (.yasw) Closes #22 and #25 as a side effect (Loading Project messes up file order)
 
 20130629; YASW 0.5 "release few but release often"
  - Key shortcuts
